chore: add page titles

--- a/index.njk
+++ b/index.njk
@@ -1,5 +1,6 @@
 ---
 layout: layouts/base.njk
+title: Personal blog by Max Ivanov
 ---
 <div class="bg--2">
   <div class="layout-width-limiter vertical-spacer-top layout-row">
