--- a/about.njk
+++ b/about.njk
@@ -7,8 +7,8 @@ title: About
 {% endset %}
 {% include "page-header.njk" %}
 
-<div class="layout-width-limiter layout-row post-page-body">
-  <div class="layout-col-1">
+<div class="layout-width-limiter layout-row">
+  <div class="layout-col-1 about-page-col-1">
     <p>I'm a full-stack developer / AWS Solutions Architect living in Portugal.</p>
     <p>If you have a professional inquiry, or just want to say hi, feel free to reach out:</p>
     <p class="about-page-contacts">
@@ -18,7 +18,7 @@ title: About
       <a class="about-page-contacts-item" href="https://linkedin.com/in/max--ivanov/">LinkedIn</a>
     </p>
   </div>
-  <div class="layout-col-2">
+  <div class="layout-col-2 post-page-body">
     <p>I've started this blog as a way to share my professional findings, deepen my knowledge by <a href="https://www.swyx.io/learn-in-public/">learning in public</a> and extend my professional network.</p>
     <p>Since childhood, I was around computers thanks to my father - an engineer and electronics enthusiast. I don't think I ever had any doubt about my future career back then.</p>
     <p>In 2008 I've graduated with a CS degree from a university in Saint-Petersburg, Russia and I've been working as a software engineer ever since.</p>
