blog: test azure functions post

--- a/about.njk
+++ b/about.njk
@@ -12,9 +12,9 @@ title: About
     <p>I'm a full-stack developer / AWS Solutions Architect living in Portugal.</p>
     <p>If you have a professional inquiry, or just want to say hi, feel free to reach out:</p>
     <p class="about-page-contacts">
-      <a class="about-page-contacts-item" href="mailto:hello@maxivanov.io">hello@maxivanov.io</a> <span class="inline-divider">·</span>
-      <a class="about-page-contacts-item" href="https://github.com/maximivanov">Github</a> <span class="inline-divider">·</span>
-      <a class="about-page-contacts-item" href="https://twitter.com/max_v_i">Twitter</a> <span class="inline-divider">·</span>
+      <a class="about-page-contacts-item" href="mailto:hello@maxivanov.io">hello@maxivanov.io</a>
+      <a class="about-page-contacts-item" href="https://github.com/maximivanov">Github</a>
+      <a class="about-page-contacts-item" href="https://twitter.com/max_v_i">Twitter</a>
       <a class="about-page-contacts-item" href="https://linkedin.com/in/max--ivanov/">LinkedIn</a>
     </p>
   </div>
