chore: add tags page to top nav

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -48,6 +48,7 @@
 
         <ul class="layout-col-2 nav">
           <li class="nav-item{% if '/archive/' == page.url %} nav-item-active{% endif %}"><a href="/archive/">Archive</a></li>
+          <li class="nav-item{% if '/tags/' == page.url %} nav-item-active{% endif %}"><a href="/tags/">Tags</a></li>
           <li class="nav-item{% if '/about/' == page.url %} nav-item-active{% endif %}"><a href="/about/">About</a></li>
         </ul>
       </div>
