--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -22,7 +22,7 @@ layout: layouts/base.njk
     <div class="post-page-tags">
       {% for tag in tags %}
         {%- if collections.tagList.indexOf(tag) != -1 -%}
-        {% set tagUrl %}/tags/{{ tag }}/{% endset %}
+        {% set tagUrl %}/tags/{{ tag | lower }}/{% endset %}
         <a href="{{ tagUrl | url }}" class="post-tag">{{ tag }}</a>
         {%- endif -%}
       {% endfor %}
