--- a/_includes/post-list.njk
+++ b/_includes/post-list.njk
@@ -19,7 +19,7 @@
       <div>
         {% for tag in post.data.tags %}
           {%- if collections.tagList.indexOf(tag) != -1 -%}
-          {% set tagUrl %}/tags/{{ tag }}/{% endset %}
+          {% set tagUrl %}/tags/{{ tag | lower }}/{% endset %}
           <a href="{{ tagUrl | url }}" class="post-tag">{{ tag }}</a>
           {%- endif -%}
         {% endfor %}
