seo: add page descriptions

--- a/archive.njk
+++ b/archive.njk
@@ -1,6 +1,7 @@
 ---
 layout: layouts/base.njk
 title: Archive
+description: All of my posts in reverse chronological order | Max Ivanov
 ---
 {% set headerContent %}
   <h1>Archive</h1>
