--- a/posts-by-tag.njk
+++ b/posts-by-tag.njk
@@ -12,6 +12,7 @@ pagination:
 layout: layouts/base.njk
 eleventyComputed:
   title: Tagged “{{ tag }}”
+  description: All posts labeled with “{{ tag }}“ tag
 permalink: /tags/{{ tag }}/
 ---
 {% set headerContent %}
