--- a/tags.njk
+++ b/tags.njk
@@ -2,6 +2,7 @@
 permalink: /tags/
 layout: layouts/base.njk
 title: All tags
+description: All topics I blogged about | Max Ivanov
 ---
 {% set headerContent %}
   <h1>All tags</h1>
