--- a/css/index.css
+++ b/css/index.css
@@ -343,6 +343,12 @@ pre[class*='language-'] {
   font-style: italic;
 }
 
+blockquote {
+  padding-left: 1.2rem;
+  border-left: 4px solid var(--lightgray-outline);
+  font-style: italic;
+}
+
 /* Post list */
 
 .post-row-sm {
