copy: update index about me

--- a/index.njk
+++ b/index.njk
@@ -8,7 +8,9 @@ title: Personal blog by Max Ivanov
     <div class="layout-col-2">
       <p>Personal blog by Max Ivanov.</p>
       <br/>
-      <p>I mostly write about cloud computing and programming.</p>
+      <p>I'm a software engineer and I help developers use cloud platforms efficiently.</p>
+      <br/>
+      <p>I write about Azure, AWS, Serverless, full-stack TypeScript, peppered with thoughts on dev life.</p>
     </div>
   </div>
 </div>
