copy: update about me

--- a/about.njk
+++ b/about.njk
@@ -10,7 +10,8 @@ description: About me | Max Ivanov
 
 <div class="layout-width-limiter layout-row">
   <div class="layout-col-1 about-page-col-1">
-    <p>I'm a full-stack developer / AWS Solutions Architect living in Portugal.</p>
+    <p>I'm a full-stack software engineer / AWS Solutions Architect living in Portugal.</p>
+    <p>I help developers use cloud platforms efficiently.</p>
     <p>If you have a professional inquiry, or just want to say hi, feel free to reach out:</p>
     <p class="about-page-contacts">
       <a class="about-page-contacts-item" href="mailto:hello@maxivanov.io">hello@maxivanov.io</a>
