copy: update front page

--- a/index.njk
+++ b/index.njk
@@ -6,9 +6,7 @@ title: Personal blog by Max Ivanov
   <div class="layout-width-limiter vertical-spacer-top layout-row">
     <div class="layout-col-1"></div>
     <div class="layout-col-2">
-      <p>Personal blog by Max Ivanov.</p>
-      <br/>
-      <p>I'm a software engineer and I help developers use cloud platforms efficiently.</p>
+      <p>Personal blog by Max Ivanov, Software Engineer / Cloud Architect.</p>
       <br/>
       <p>I write about Azure, AWS, Serverless, full-stack TypeScript, peppered with thoughts on dev life.</p>
     </div>
