--- a/about.njk
+++ b/about.njk
@@ -12,7 +12,7 @@ description: About me | Max Ivanov
   <div class="layout-col-1 about-page-col-1">
     <p>I'm a full-stack software engineer / AWS Solutions Architect living in Portugal.</p>
     <p>I help developers use cloud platforms efficiently.</p>
-    <p>If you have a professional inquiry, or just want to say hi, feel free to reach out:</p>
+    <p>Say hi:</p>
     <p class="about-page-contacts">
       <a class="about-page-contacts-item" href="mailto:hello@maxivanov.io">hello@maxivanov.io</a>
       <a class="about-page-contacts-item" href="https://github.com/maximivanov">Github</a>
@@ -21,11 +21,11 @@ description: About me | Max Ivanov
     </p>
   </div>
   <div class="layout-col-2 post-page-body">
-    <p>I've started this blog as a way to share my professional findings, deepen my knowledge by <a href="https://www.swyx.io/learn-in-public/">learning in public</a> and extend my professional network.</p>
-    <p>Since childhood, I was around computers thanks to my father - an engineer and electronics enthusiast. I don't think I ever had any doubt about my future career back then.</p>
-    <p>In 2008 I've graduated with a CS degree from a university in Saint-Petersburg, Russia and I've been working as a software engineer ever since.</p>
-    <p>In 2014 I've joined <a href="https://www.toptal.com#pick-the-top-contractors">Toptal</a> and started working remotely as a contractor. I'm quite happy being remote and I don't see myself going back to an office anytime soon.</p>
-    <p>In 2016, with my family and a dog, I've moved to Portugal 🇵🇹 - a great country generous with its ocean, sun, and friendly people.</p>
+    <p>I started this blog as a way to share my professional findings, deepen my knowledge by <a href="https://www.swyx.io/learn-in-public/">learning in public</a> and extend my professional network.</p>
+    <p>🧒🏻 Since childhood, I was around computers thanks to my father - an engineer and electronics enthusiast. I don't think I ever had any doubt about my future career back then.</p>
+    <p>👨🏻‍🎓 In 2008, I graduated with a CS degree from a university in Saint-Petersburg, Russia and I've been working as a software engineer ever since.</p>
+    <p>👨🏻‍💻 In 2014, I joined <a href="https://www.toptal.com#pick-the-top-contractors">Toptal</a> and started working remotely as a contractor. I'm quite happy being remote and I don't see myself going back to an office anytime soon.</p>
+    <p>🇵🇹 In 2016, with my family and a dog, I moved to Portugal - a great country generous with its ocean, sun, and friendly people.</p>
     <p>Nowadays, some of the keywords that catch my interest, in no particular order:</p>
     <ul>
       <li>Cloud technology</li>
@@ -40,6 +40,5 @@ description: About me | Max Ivanov
       <li>Testing (all kinds of it)</li>
       <li>DevOps</li>
     </ul>
-    <p>Outside of work I like to go outdoors to hike or ride my bicycle. If the mood is to stay at home I'd read or cook and invite friends for a barbeque.</p>
   </div>
 </div>
