--- a/index.njk
+++ b/index.njk
@@ -1,6 +1,5 @@
 ---
 layout: layouts/base.njk
-title: Personal blog by Max Ivanov
 ---
 <div class="bg--2">
   <div class="layout-width-limiter vertical-spacer-top layout-row">
@@ -8,7 +7,7 @@ title: Personal blog by Max Ivanov
     <div class="layout-col-2">
       <p>Personal blog by Max Ivanov, Software Engineer / Cloud Architect.</p>
       <br/>
-      <p>I write about Azure, AWS, Serverless, full-stack TypeScript, peppered with thoughts on dev life.</p>
+      <p>I write about Azure, AWS, Serverless, DevOps, fullstack TypeScript, peppered with thoughts on dev life.</p>
     </div>
   </div>
 </div>
