--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -1,3 +1,19 @@
+---
+type: page
+meta:
+  language: en-US
+
+eleventyComputed:
+  meta:
+    site:
+      name: "{{ metadata.title }}"
+      description: "{{ metadata.description }}"
+      url: "{{ metadata.url }}"
+    title: "{{ title or metadata.title }}"
+    description: "{{ description or metadata.description }}"
+    image:
+      src: "{% if image %}{{ metadata.url }}{{ image }}{% endif %}"
+---
 <!doctype html>
 <html lang="en">
   <head>
@@ -19,6 +35,7 @@
     {% if tags %}
     <meta property="og:type" content="article">
     {% endif %}
+    {% jsonLdScript meta, type, tags %}
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
