--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -19,16 +19,20 @@ eleventyComputed:
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>{{ title or metadata.title }}</title>
     <meta name="description" content="{{ description or metadata.description }}">
     <meta property="og:title" content="{{ title or metadata.title }}">
-    <meta property="og:url" content="{{ metadata.url }}{{ page.url }}">
     <meta property="og:description" content="{{ description or metadata.description }}">
+    <meta property="og:url" content="{{ metadata.url }}{{ page.url }}">
     <meta name="twitter:site" content="@max_v_i">
+    <meta name="twitter:creator" content="@max_v_i">
     <meta name="twitter:title" content="{{ title or metadata.title }}">
     <meta name="twitter:description" content="{{ description or metadata.description }}">
     {% if image %}
     <meta property="og:image" content="{{ metadata.url }}{{ image }}">
+    <meta property="og:image:width" content="1000" />
+    <meta property="og:image:height" content="420" />
     <meta name="twitter:image" content="{{ metadata.url }}{{ image }}">
     <meta name="twitter:card" content="summary_large_image">
     {% endif %}
