--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -51,7 +51,7 @@ eleventyComputed:
     <link rel="stylesheet" href="{{ '/css/index.css' | url }}">
     <link rel="alternate" href="{{ metadata.feed.path | url }}" type="application/atom+xml" title="{{ metadata.title }}">
     <link rel="alternate" href="{{ metadata.jsonfeed.path | url }}" type="application/json" title="{{ metadata.title }}">
-    {% if isProd %}
+    {% if env.isProd %}
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-MP7L71RW6V"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
