edit: curl graphql simplify mutation example

--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -15,6 +15,9 @@ eleventyComputed:
     <p class="post-page-reading-time">Reading time: <span>{{ content | readingTime({speed: 200}) }}</span></p>
     <p class="post-page-date">
       <time datetime="{{ date | htmlDateString }}">{{ date | readableDate }}</time>
+      {% if updateDate %}
+        (last updated <time datetime="{{ updateDate | htmlDateString }}">{{ updateDate | readableDate }}</time>)
+      {% endif %}
     </p>
     <p class="post-page-divider post-page-divider--start">_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_</p>
   </div>
