copy: update about

--- a/about.njk
+++ b/about.njk
@@ -22,10 +22,16 @@ description: About me | Max Ivanov
   </div>
   <div class="layout-col-2 post-page-body">
     <p>I started this blog as a way to share my professional findings, deepen my knowledge by <a href="https://www.swyx.io/learn-in-public/">learning in public</a> and extend my professional network.</p>
-    <p>🧒🏻 Since childhood, I was around computers thanks to my father - an engineer and electronics enthusiast. I don't think I ever had any doubt about my future career back then.</p>
-    <p>👨🏻‍🎓 In 2008, I graduated with a CS degree from a university in Saint-Petersburg, Russia and I've been working as a software engineer ever since.</p>
+    <p>🧒🏻 Since childhood, I was around computers thanks to my father - an engineer and electronics enthusiast. 
+    I don't think I ever had any doubt about my future career back then.
+    I built my first website in high school in 2001 in between playing <em>Duke Nukem 3D</em> and <em>Might&Magic 7</em>.</p>
+    <p>👨🏻‍🎓 In 2008, I graduated with a CS degree from a university in Saint-Petersburg, Russia and I've been working as a software engineer ever since.
+    Throughout the years I've been part of frontend, backend and devops projects. Building scalable APIs and resilient infrastructure is what I enjoy doing.
+    </p>
     <p>👨🏻‍💻 In 2014, I joined <a href="https://www.toptal.com#pick-the-top-contractors">Toptal</a> and started working remotely as a contractor. I'm quite happy being remote and I don't see myself going back to an office anytime soon.</p>
-    <p>🇵🇹 In 2016, with my family and a dog, I moved to Portugal - a great country generous with its ocean, sun, and friendly people.</p>
+    <p>🇵🇹 In 2016, with my family and our dog, I moved to Portugal - a great country generous with its ocean, sun, and friendly people.
+    I continue to consult and work remotely.
+    </p>
     <p>Nowadays, some of the keywords that catch my interest, in no particular order:</p>
     <ul>
       <li>Cloud technology</li>
@@ -40,5 +46,6 @@ description: About me | Max Ivanov
       <li>Testing (all kinds of it)</li>
       <li>DevOps</li>
     </ul>
+    <p>If you have a question or want to say hello, drop me a note at <a href="mailto:hello@maxivanov.io">hello@maxivanov.io</a> or ping me in <a href="https://twitter.com/max_v_i">Twitter</a>.
   </div>
 </div>
