chore: website updates

--- a/about.njk
+++ b/about.njk
@@ -26,7 +26,7 @@ description: About me | Max Ivanov
     I don't think I ever had any doubt about my future career back then.
     I built my first website in high school in 2001 in between playing <em>Duke Nukem 3D</em> and <em>Might&Magic 7</em>.</p>
     <p>👨🏻‍🎓 In 2008, I graduated with a CS degree from a university in Saint-Petersburg, Russia and I've been working as a software engineer ever since.
-    Throughout the years I've been part of frontend, backend and devops projects. Building scalable APIs and resilient infrastructure is what I enjoy doing.
+    Throughout the years I've been part of frontend, backend and devops projects. Building scalable APIs and resilient infrastructure is what I enjoy doing most.
     </p>
     <p>👨🏻‍💻 In 2014, I joined <a href="https://www.toptal.com#pick-the-top-contractors">Toptal</a> and started working remotely as a contractor. I'm quite happy being remote and I don't see myself going back to an office anytime soon.</p>
     <p>🇵🇹 In 2016, with my family and our dog, I moved to Portugal - a great country generous with its ocean, sun, and friendly people.
