--- a/css/index.css
+++ b/css/index.css
@@ -142,6 +142,10 @@ pre[class*='language-'] {
   padding-bottom: calc(1rem + 2vw);
 }
 
+.font-regular {
+  font-family: 'Roboto', sans-serif;
+}
+
 /* Layout */
 
 .layout-width-limiter {
@@ -423,6 +427,7 @@ blockquote {
 
 .posts__post-row-description {
   margin-bottom: 0.3rem;
+  font-family: 'Roboto', sans-serif;
 }
 
 /* Tags page */
